classDiagram
    class Task {
        +str title
        +int duration_minutes
        +str priority
        +Optional~str~ frequency
        +Optional~date~ due_date
        +str start_time
        +bool is_complete
        +mark_complete()
        +next_occurrence() Task
    }

    class Pet {
        +int age
        +List~Task~ tasks
        +add_task(task: Task)
        +complete_task(task: Task)
        +get_pending_tasks() List~Task~
        +get_tasks_by_status(complete: bool) List~Task~
    }

    class Owner {
        +str name
        +int available_start
        +int available_end
        +Pet pet
        +get_all_tasks() List~Task~
    }

    class Scheduler {
        +Owner owner
        +List~Task~ scheduled_tasks
        +List~Task~ skipped_tasks
        +List~str~ conflicts
        +generate_schedule() List~Task~
        +sort_by_time(tasks: List~Task~) List~Task~
        +detect_conflicts() List~str~
        +filter_by_status(complete: bool) List~Task~
        +explain_plan() str
    }

    Owner "1" *-- "1" Pet : owns
    Pet "1" *-- "0..*" Task : has
    Scheduler "1" --> "1" Owner : schedules for
    Task ..> Task : next_occurrence() creates
